# sdev-ap-field

./: .gitignore  README.md
airodump/: .gitignore  airodump-test.c  airodump-test.cpp  makefile  pcap-test.c  radiohdr-field.h  wlan-80211.c
airodump/pcapfile/: mon0_pwr.pcapng  mon0_wlan.pcapng
csa/: 2026-05-05-CSA_selfcapture.pcapng  CMakeLists.txt  Claude.md  Goal.md  csa.cpp  main.cpp
csa/Test/: unit_test1.cpp  unit_test2.cpp  unit_test3.cpp
csa/include/: dot11.h  mac.h  param.h  pch.h  radiotap.h  utils.h
csa/logs/: agent_syslog_1  agent_syslog_2  agent_syslog_3  agent_syslog_4  agent_syslog_5  agent_syslog_6
csa/src/: dot11.cpp  mac.cpp  param.cpp  radiotap.cpp  utils.cpp
deauth/: 2026-04-24-CSA_capture.pcapng  2026-05-03-Deauth_S24U-AP_N105G-ST.pcapng  deauth-attack.cpp  deauth-attack.pro  makefile
deauth/include/: dot11.h  mac.h  radiotap.h
deauth/src/: dot11.cpp  mac.cpp  param.cpp
nbo/: sum-nbo  sum-nbo.cpp
pcap-test/: pcap-test  pcap-test.c
pcap-test/testfile/: http-filtered-packet.pcap
